--- a/renovate.json5
+++ b/renovate.json5
@@ -8,8 +8,8 @@
     // Limit the number of PRs by grouping all dependencies into a single PR
     "group:all",
 
-    // Automerge everything once a week
-    "schedule:automergeEarlyMondays",
+    // Run only once a week
+    "schedule:earlyMondays",
   ],
 
   // Add these labels to all PRs to make them easy to visually separate
@@ -22,7 +22,8 @@
   reviewersFromCodeOwners: true,
   assigneesFromCodeOwners: true,
 
-  // Always be notified when a PR is created
+  // YOLO automerge everything, but at least be notified when a PR is created
+  automerge: true,
   assignAutomerge: true,
 
   // Make sure dependencies are somewhat hardened first
