--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ description: Insert fun personal tagline here.
 # Customize the template's links
 show_downloads: false
 github:
-  repository_url: https://github.com/bigpopakap/discussions
+  repository_url: https://github.com/bigpopakap
 
 # Note: the Slate theme does not work with Google Analystics 4
 #       see https://github.com/pages-themes/slate/issues/49
