--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,3 +11,9 @@ github:
 google_analytics: G-NQ6TZW218Q
 
 remote_theme: pages-themes/leap-day@v0.2.0
+
+feed:
+  path: /blog/feed.xml
+
+plugins:
+  - jekyll-feed
