--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,9 @@
-# Theme
+# Plugins
 plugins:
-  - jekyll-feed # Generates the RSS feed
+  - jekyll-redirect-from
 
-remote_theme: daattali/beautiful-jekyll@5.0.0
+# Theme
+theme: beautiful-jekyll-theme
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
@@ -16,14 +17,17 @@ description: Some clever personal motto.
 author: Kapil Easwar
 
 # The keywords to associate with your website, for SEO purposes
-keywords: "kapil easwar"
+# This is a single string of comma-separated keywords
+keywords: "kapil easwar,projitect"
+
+# RSS feed description
+# Must set this to some value to get a feed generated
+rss-description: "Kapil Easwar's Blog"
 
 navbar-links:
   Blog: "blog"
   Resume: "resume"
   Projitect: "https://projitect.dev"
-
-paginate_path: "/blog/page:num/"
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
