--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ plugins:
   - jekyll-redirect-from
 
 # Theme
-theme: beautiful-jekyll-theme
+remote_theme: daattali/beautiful-jekyll@5.0.0
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
